# Mini-Scratch

./: CMakeLists.txt  UI.h  control.h  custom menu.h  events.h  execute.h  looks.h  main.cpp  motion.h  operators.h  variables.h  ٰvariables.h
